Fix: #11 Modify AppBar
material3 -> material top, bottom bar
remove edgeToEdge

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ junit = "4.13.2"
 lifecycle-runtime-ktx = "2.7.0"
 compose-bom = "2024.04.00"
 hilt = "2.51.1"
+material = "1.6.6"
 navigation-compose = "2.7.7"
 okhttp = "4.12.0"
 retrofit = "2.9.0"
@@ -21,7 +22,6 @@ room = "2.6.1"
 kotlinx-serialization-json = "1.6.3"
 hilt-navigation-compose = "1.2.0"
 coil-compose = "2.6.0"
-animated-navigation-bar = "1.0.0"
 
 
 [plugins]
@@ -47,11 +47,11 @@ androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle-runtime-ktx" }
+androidx-material = { module = "androidx.compose.material:material", version.ref = "material" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
-animated-navigation-bar = { module = "com.exyte:animated-navigation-bar", version.ref = "animated-navigation-bar" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil-compose" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
