--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/seoul_go_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Seoul_go"
-        tools:targetApi="31" >
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
     <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
