--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@
 gradle = "8.2.2"
 kotlin = "1.9.23"
 ksp = "1.9.23-1.0.20"
+hilt = "2.51.1"
 
 # libraries
 activity-compose = "1.8.2"
@@ -12,7 +13,6 @@ espresso-core = "3.5.1"
 junit = "4.13.2"
 lifecycle-runtime-ktx = "2.7.0"
 compose-bom = "2024.04.00"
-hilt = "2.51.1"
 material = "1.6.6"
 navigation-compose = "2.7.7"
 okhttp = "4.12.0"
@@ -23,7 +23,12 @@ kotlinx-serialization-json = "1.6.3"
 hilt-navigation-compose = "1.2.0"
 coil-compose = "2.6.0"
 timber = "5.0.1"
+v2-user = "2.20.1"
 work-runtime-ktx = "2.9.0"
+credentials = "1.2.2"
+googleid = "1.1.0"
+play-services-auth = "21.2.0"
+datastore-preferences = "1.1.1"
 
 
 [plugins]
@@ -32,10 +37,15 @@ jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = 
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+#android-googleid = { id = "com.google.android.libraries.identity.googleid", version.ref = "googleid" }
+
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
+androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
+androidx-credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentials" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore-preferences" }
 androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
@@ -57,6 +67,7 @@ androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref =
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "work-runtime-ktx" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil-compose" }
+googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleid" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -65,8 +76,11 @@ okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit2-kotlinx-serialization-converter" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "play-services-auth" }
+v2-user = { module = "com.kakao.sdk:v2-user", version.ref = "v2-user" }
 
 
 [bundles]
 room = ["androidx-room-ktx", "androidx-room-runtime"]
 retrofit = ["retrofit", "okhttp", "kotlinx-serialization-json", "retrofit2-kotlinx-serialization-converter"]
+gooleCredentialManager = ["androidx-credentials", "androidx-credentials-play-services-auth", "googleid"]
